[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "form2request"
version = "0.2.0"
description = "Build HTTP requests out of HTML forms"
authors = [{name = "Zyte Group Ltd", email = "info@zyte.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "lxml >= 4.6.0",
    "parsel >= 1.8.1",
    "w3lib >= 1.19.0",
]

[project.urls]
Code = "https://github.com/scrapy/form2request"
Docs = "https://form2request.readthedocs.io/en/latest/"

[tool.setuptools.package-data]
form2request = ["py.typed"]

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
parse = 'version\s*=\s*"(?P<major>\d+)\.(?P<minor>\d+)'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
parse = 'version\s*=\s*"(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
allow_untyped_defs = true
check_untyped_defs = true

[tool.ruff.lint]
extend-select = [
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pydocstyle
    "D",
    # flake8-future-annotations
    "FA",
    # flynt
    "FLY",
    # refurb
    "FURB",
    # isort
    "I",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-logging
    "LOG",
    # Perflint
    "PERF",
    # pygrep-hooks
    "PGH",
    # flake8-pie
    "PIE",
    # pylint
    "PL",
    # flake8-pytest-style
    "PT",
    # flake8-use-pathlib
    "PTH",
    # flake8-pyi
    "PYI",
    # flake8-quotes
    "Q",
    # flake8-return
    "RET",
    # flake8-raise
    "RSE",
    # Ruff-specific rules
    "RUF",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM",
    # flake8-slots
    "SLOT",
    # flake8-debugger
    "T10",
    # flake8-type-checking
    "TC",
    # pyupgrade
    "UP",
    # pycodestyle warnings
    "W",
    # flake8-2020
    "YTT",
]
ignore = [
    # 1 blank line required between summary line and description
    "D205",
    # First line should end with a period
    "D400",
    # Too many return statements
    "PLR0911",
    # Too many branches
    "PLR0912",
    # Too many arguments in function definition
    "PLR0913",
    # Too many statements
    "PLR0915",
    # Magic value used in comparison
    "PLR2004",
    # Use of `assert` detected
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["D"]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
